Déploiement sécurisé OpenAI

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# OpenAI Configuration
-VITE_OPENAI_API_KEY=your_openai_api_key
+# OpenAI Configuration (backend only)
+OPENAI_API_KEY=your_openai_api_key
 
 # Firebase Configuration
 VITE_FIREBASE_API_KEY=your_firebase_api_key
