--- a/package.json
+++ b/package.json
@@ -49,12 +49,15 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@netlify/functions": "^2.4.1",
+    "@types/node-fetch": "^2.6.9",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "esbuild": "0.24.0",
     "esno": "^4.0.0",
     "globals": "15.12.0",
+    "node-fetch": "^2.7.0",
     "tailwindcss": "3.4.16",
     "vite": "^6.0.4"
   },
