--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^16.4.5",
     "emoji-regex": "^10.3.0",
     "firebase": "^10.8.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.453.0",
     "nanoid": "^5.0.6",
