--- a/netlify/functions/tsconfig.json
+++ b/netlify/functions/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
-    "outDir": "lib",
+    "outDir": ".",
     "sourceMap": true,
     "strict": true,
     "target": "es2017",
@@ -13,6 +13,6 @@
   },
   "compileOnSave": true,
   "include": [
-    "*.ts"
+    "./*.ts"
   ]
 }
