--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,7 @@ yarn-error.log*
 
 # Firebase
 .firebase/
+serviceAccountKey.json
+netlify/functions/firebase-service-account.json
 # Local Netlify folder
 .netlify
