--- a/netlify/functions/tsconfig.json
+++ b/netlify/functions/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
-    "outDir": ".",
+    "outDir": "lib",
     "sourceMap": true,
     "strict": true,
     "target": "es2017",
@@ -13,6 +13,9 @@
   },
   "compileOnSave": true,
   "include": [
-    "./*.ts"
+    "*.ts"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
