--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev": "vite",
     "build": "vite build && npm run build:functions",
     "build:functions": "tsc netlify/functions/stripeWebhook.ts --outDir netlify/functions --module commonjs --target es2017 --esModuleInterop --skipLibCheck",
-
     "create-books": "esno src/scripts/createSampleBooks.ts"
   },
   "dependencies": {
@@ -27,6 +26,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@stripe/stripe-js": "^3.0.7",
     "@supabase/supabase-js": "^2.39.7",
+    "@types/uuid": "^10.0.0",
     "audio-recorder-polyfill": "^0.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "2.1.1",
@@ -48,6 +48,7 @@
     "swiper": "^11.0.6",
     "tailwind-merge": "2.5.4",
     "ts-node": "^10.9.2",
+    "uuid": "^11.1.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
